--- a/Dropdownlistmvc/WhatWeEat.csproj
+++ b/Dropdownlistmvc/WhatWeEat.csproj
@@ -198,6 +198,10 @@
     <Compile Include="Migrations\201812162207431_salaryremove.Designer.cs">
       <DependentUpon>201812162207431_salaryremove.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812170039327_asd.cs" />
+    <Compile Include="Migrations\201812170039327_asd.Designer.cs">
+      <DependentUpon>201812170039327_asd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EFDbContext.cs" />
@@ -242,6 +246,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812162207431_salaryremove.resx">
       <DependentUpon>201812162207431_salaryremove.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812170039327_asd.resx">
+      <DependentUpon>201812170039327_asd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
