--- a/Dropdownlistmvc/Views/web.config
+++ b/Dropdownlistmvc/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="Dropdownlistmvc" />
+        <add namespace="WhatWeEat" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
